--- a/esp-smartbike/platformio.ini
+++ b/esp-smartbike/platformio.ini
@@ -8,11 +8,26 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:nodemcu-32s]
 platform = espressif32
-board = esp32dev
+board = nodemcu-32s
 framework = arduino
 upload_speed = 115200
 monitor_speed = 115200
-
-lib_deps = knolleary/PubSubClient@^2.8
+build_flags = 
+	-DLED_RED=23
+	
+	-DMAIN_NAME=\"led\"
+	-DSUB_NAME=\"inel00\"
+	
+	-DMQTT=0
+	
+	-DWIFI=1
+	
+	-DSUB_LIST=1
+	
+	-DBAUD=${env:nodemcu-32s.monitor_speed}
+lib_deps = 
+	PubSubClient@2.8.0
+	TelnetStream
+	jandrassy/NetApiHelpers@^1.0.1
