new session callback

--- a/esp-smartbike/platformio.ini
+++ b/esp-smartbike/platformio.ini
@@ -17,7 +17,7 @@ monitor_speed = 115200
 build_flags = 
 	-DLED_RED=23
 	
-	-DMAIN_NAME=\"led\"
+	-DMAIN_NAME=\"smartbike\"
 	-DSUB_NAME=\"inel00\"
 	
 	-DMQTT=0
