add gps and display code

--- a/esp-smartbike/platformio.ini
+++ b/esp-smartbike/platformio.ini
@@ -22,12 +22,12 @@ build_flags =
 	
 	-DMQTT=0
 	
-	-DWIFI=1
+	-DWIFI=0
 	
 	-DSUB_LIST=1
 	
 	-DBAUD=${env:nodemcu-32s.monitor_speed}
 lib_deps = 
 	PubSubClient@2.8.0
-	TelnetStream
-	jandrassy/NetApiHelpers@^1.0.1
+	mikalhart/TinyGPSPlus@^1.0.3
+	adafruit/Adafruit SH110X@^2.1.10
