--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,32 @@
 {
-  "name": "smartbike-server",
-  "version": "1.0.0",
-  "type": "module",
-  "main": "src/index.js",
-  "scripts": {
-    "dev": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongoose": "^8.3.0",
-    "mqtt": "^5.5.0",
-    "nodemon": "^3.1.0"
-  }
+    "name": "smartbike-server",
+    "version": "1.0.0",
+    "type": "module",
+    "main": "src/index.js",
+    "scripts": {
+        "dev": "nodemon src/index.js",
+        "format:check": "prettier --check .",
+        "format:write": "prettier --write .",
+        "lint:check": "eslint .",
+        "lint:fix": "eslint --fix .",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "mongoose": "^8.3.0",
+        "mqtt": "^5.5.0",
+        "nodemon": "^3.1.0"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.2.0",
+        "eslint": "^9.2.0",
+        "eslint-config-prettier": "^9.1.0",
+        "globals": "^15.2.0",
+        "prettier": "^3.2.5"
+    }
 }
