--- a/smartbike-app/package.json
+++ b/smartbike-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "smartbike-app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,12 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
     "buffer": "^6.0.3",
     "expo": "~51.0.4",
+    "expo-constants": "~16.0.1",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.14",
     "expo-status-bar": "~1.12.1",
     "mqtt": "^5.5.5",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "url": "^0.11.3"
   },
   "devDependencies": {
