--- a/smartbike-app/package.json
+++ b/smartbike-app/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "buffer": "^6.0.3",
-    "expo": "~51.0.4",
-    "expo-constants": "~16.0.1",
+    "expo": "^51.0.9",
+    "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
     "expo-status-bar": "~1.12.1",
