--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -3,6 +3,10 @@ services:
         image: mongo
         ports:
             - '27017:27017'
+        environment:
+            MONGO_INITDB_ROOT_USERNAME: admin
+            MONGO_INITDB_ROOT_PASSWORD: admin
+            MONOG_INITDB_DATABASE: smartbike
 
     mongo-express:
         image: mongo-express
@@ -10,4 +14,7 @@ services:
         ports:
             - 8081:8081
         environment:
-            ME_CONFIG_MONGODB_URL: mongodb://mongo:27017/
+            ME_CONFIG_MONGODB_URL: mongodb://admin:admin@mongo:27017/
+            ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+            ME_CONFIG_MONGODB_ADMINPASSWORD: admin
+            ME_CONFIG_BASICAUTH: false
