--- a/smartbike-app/package.json
+++ b/smartbike-app/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "buffer": "^6.0.3",
+    "dayjs": "^1.11.11",
     "expo": "^51.0.9",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
@@ -21,10 +24,10 @@
     "mqtt": "^5.5.5",
     "react": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "url": "^0.11.3",
-    "react-native-maps": "1.14.0"
+    "react-native-maps": "1.14.0",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "url": "^0.11.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
