--- a/smartbike-app/package.json
+++ b/smartbike-app/package.json
@@ -16,17 +16,19 @@
     "@react-navigation/stack": "^6.3.29",
     "buffer": "^6.0.3",
     "dayjs": "^1.11.11",
-    "expo": "^51.0.9",
+    "expo": "~51.0.11",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.14",
+    "expo-router": "~3.5.15",
     "expo-status-bar": "~1.12.1",
     "mqtt": "^5.5.5",
     "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-maps": "1.14.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.3.0",
     "url": "^0.11.3"
   },
   "devDependencies": {
