--- a/smartbike-app/package.json
+++ b/smartbike-app/package.json
@@ -29,7 +29,8 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.3.0",
-    "url": "^0.11.3"
+    "url": "^0.11.3",
+    "expo-build-properties": "~0.12.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
